     changes in C, bringing the Python and C implementations back in
     sync.  See lib/python/AccessControl/ZopeSecurityPolicy.py.

   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8

  Zope 2.8.5 (unreleased)

    Bugs Fixed

      - Collector #1891:  Backported changes to ZCatalog regression
        tests, removing use of 'whrandom' (and its 'seed' function).

      - Collector #1621, #1894:  Added BBB alias for 'whrandom'
        in AccessControl/DTML.py and RestrictedPython/Utilities.py.  The
        alias will be removed in Zope 2.10.

      - Collector #1954: DocumentTemplate.DT_String:  remove non-XHTML
        wart from error message.

      - Fixed unclear security declarations. Warn when an attempt is
        made to have a security declaration on a nonexistent method.

      - OFS Application: While deprecated since years, old-style product
        metadata in the __init__.py did not show deprecation warnings. Added
        warnings and converted ZGadflyDA/__init__.py and
        ZSQLMethods/__init__.py to use registerClass instead.

    Other

      - Suppressed output of deprecation warning in 'filepath' test
        for PythonScripts.

  Zope 2.8.4 (2005/10/26)

    Bugs Fixed

      - Collector #1927:  Modified ZReST not to store rendered / warnings
        as persistent attributes, using volatile attributes instead as
        a cache.

      - Collector #1926: fixed a typo in _doAddUser when password
        encryption is enabled.

      - If a content object implemented any in-place numeric operators, 
        untrusted code could call them, thus modifying the content.

      - If Python 2.4 is used, despite the fact that Python 2.4 is
        unsupported, untrusted code could use generator expressions to
        gain access to container items.

  Zope 2.8.3 (2005/10/18)

    Other
